<h4>1.3.9</h4>
<p><strong>Enhancements</strong></p>
<ul>
    <li>Clicking a Beaver Builder theme header link now asks if you want to publish before launching the builder on a new page.</li>
    <li>Added support for multiple builder layouts on the same page.</li>
    <li>Color picker hex inputs now accept the # symbol.</li>
    <li>Added a new link field that allows you to search for a post of any type to link to.</li>
    <li>Added white labeling to the plugins page.</li>
    <li>Added an admin setting for disabling advanced editing functionality such as adding, deleting and moving modules.</li>
</ul>
<p><strong>Bug Fixes</strong></p>
<ul>
    <li>Fixed a compatibility issue with themes that use older versions of Option Tree.</li>
    <li>Removed deprecated like_escape function from FLBuilderLoop class.</li>
</ul>

<h4>1.3.8</h4>
<p><strong>Enhancements</strong></p>
<ul>
    <li>Single photos can now be opened in a lightbox by choosing lightbox in the photo module's link settings.</li>
    <li>Added the ability to define custom fields through actions. Developers should review the custom module docs and examples for detailed info on how that works.</li>
    <li>Added the ability to duplicate rows.</li>
</ul>
<p><strong>Bug Fixes</strong></p>
<ul>
    <li>Fixed a bug that made it so you could only have one text or code editor within a builder settings panel. Thanks to Nicholas Joannes for the fix!</li>
    <li>Reworked the load order and definitions for the main builder JavaScript class to prevent issues with some minification plugins.</li>
    <li>Fixed a bug with generating new builder node ids that was affecting templates in some cases.</li>
</ul>

<h4>1.3.7</h4>
<p><strong>Enhancements</strong></p>
<ul>
    <li>Added circle crop option to the photo module.</li>
    <li>Added icon setting for white labeling.</li>
</ul>
<p><strong>Bug Fixes</strong></p>
<ul>
    <li>Fixed a bug with the posts module that kept shortcodes from rendering.</li>