@@ -3,7 +3,7 @@
 if(class_exists('FLUpdater')) {
     FLUpdater::add_product(array(
         'name'      => 'Beaver Builder Plugin (Lite Version)', 
-        'version'   => '1.3.9', 
+        'version'   => '1.4.0', 
         'slug'      => 'bb-plugin',
         'type'    	=> 'plugin'
     )); 
