@@ -1,3 +1,10 @@
+<h4>1.4.0</h4>
+<p><strong>Bug Fixes</strong></p>
+<ul>
+    <li>Fixed a bug introduced in 1.3.9 with moving modules into the main layout to create a new row.</li>
+    <li>Fixed classname conflicts with the pricing table module that broke the builder in some cases.</li>
+</ul>
+
 <h4>1.3.9</h4>
 <p><strong>Enhancements</strong></p>
 <ul>
